<resources>
    <string name="app_name">Deloitte Task</string>
    <string name="error_generic_message">Something wrong happened</string>
    <string name="error_no_internet_message">Please check your data or wi-fi connection.</string>
    <string name="error_timeout_error_message">An error occurred processing the request</string>

    <string name="label_bottom_bar_dashboard">Dashboard</string>
    <string name="label_bottom_bar_more">More</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="button_login">Login</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_national_id">National ID</string>
    <string name="label_details">Details</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_settings">Settings</string>
    <string name="label_logout">Logout</string>
    <string name="label_date_of_birth">Date of Birth</string>
    <string name="error_user_already_exist">This National Id  or Email are wrong or already used</string>
    <string name="error_wrong_email_or_password">Wrong Email or Password</string>
    <string name="button_register">Register</string>
    <string name="label_prompt_logout">Do you want to logout?</string>
    <string name="label_cancel">Cancel</string>

    <!--    Validation-->
    <string name="error_validation_invalid_email">Invalid Email</string>
    <string name="error_validation_invalid_phone_number">Invalid Phone Number</string>
    <string name="error_validation_has_caps">Should contain at least one capital letter</string>
    <string name="error_validation_has_number">Should contain at least one number</string>
    <string name="error_validation_has_small_letters">Should contain at least one number</string>
    <string name="error_validation_has_special_character">Should contain at least one special character</string>
    <string name="error_validation_length_max">Text length should not exceed %d characters</string>
    <string name="error_validation_length_min">Text length should be at least be %d characters</string>
    <string name="error_validation_space">Text should not contain any space</string>
    <string name="error_validation_default">Invalid text format</string>


</resources>